[package]
name = "kodama"
version = "0.9.9"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["std", "derive", "color", "help"] }
eyre = { version = "0.6.12", default-features = false, features = ["auto-install", "track-caller"] }
fastrand = { version = "2.3.0", default-features = false, features = ["std"] }
htmlize = { version = "1.0.5", features = ["unescape"]}
internment = { version = "0.8.6", default-features = false, features = ["intern", "serde"] }
pulldown-cmark = { version = "0.12.2", default-features = false, features = ["html"] }
pulldown-cmark-escape = "0.11.0"
regex-lite = { version = "0.1.6", default-features = false, features = ["std", "string"] }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
walkdir = "2.5.0"
notify = { version = "8.0.0", default-features = false, features = ["macos_fsevent"] }
itertools = { version = "0.14.0", default-features = false, features = ["use_std"] }
toml = { version = "0.9.0", default-features = false, features = ["display", "parse", "serde", "std"] }
url = { version = "2.5.4", default-features = false, features = ["std"] }
camino = { version = "1.1.10", default-features = false }
color-print = "0.3.6"
indexmap = { version = "2.8.0", default-features = false, features = ["serde", "std"] }

[profile.release]
strip = true

[lints.clippy]
uninlined_format_args = "allow"
